--- a/concepts/03-multi-container.yaml
+++ b/concepts/03-multi-container.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-multi-container
+  name: multi-container
   labels:
     project: expense
     environment: dev
