--- a/concepts/storage/03-efs-static.yaml
+++ b/concepts/storage/03-efs-static.yaml
@@ -42,8 +42,7 @@ spec:
       image: nginx
       volumeMounts:
         - name: persistent-storage
-          mountPath: /usr/share/nginx/html/index.html
-          subPath: index.html
+          mountPath: /usr/share/nginx/html/
   volumes:
     - name: persistent-storage
       persistentVolumeClaim:
